--- a/progress/w01_30_01.md
+++ b/progress/w01_30_01.md
@@ -93,6 +93,8 @@
 <!-- What was your main achievement -->
 <h2>Achievements</h2>
 
+<h2>My weekly achievement<h2>
+
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
