📝doc: updated w01 details

--- a/progress/w01_30_01.md
+++ b/progress/w01_30_01.md
@@ -51,9 +51,9 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Run the project | Project is *running* or *not running* | |
-| Pick a teammate | Teammate *picked* or *asked to pick* | *Link to GitHub of teammate* |
+| Choose a project | *Chosen* | [Elewa-group](https://github.com/italanta/elewa-group/) |
+| Run the project | Project is *running but not live* | |
+| Pick a teammate | Teammate *picked* | *Link to GitHub of teammate* |
 
 
 <h2 align="center">03/02</h2>
@@ -70,7 +70,7 @@
 | Scrum	 | Answers 	| 
 |----------	|-------	|
 | Doing today? | I am choosing a first issue and attending an elewa "Lesson of the week" |
-| Objective | To choose and understand my first issue |
+| Objective | To choose and understand Angular and my first issue |
 | Blockers? | No blockers |
 
 
