📝doc: updated the week 02 day 1 diary

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -29,9 +29,9 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | I am selecting an issue to work on the project with my Teammate |
+| Objective    | Design a workflow for us to collaborate on delivering the issue |
+| Blockers?    | None |
 
 ### Task progresss board
 
