📝 doc: added what I am doing today

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -29,7 +29,7 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? | I am selecting an issue to work on the project with my Teammate |
+| Doing today? | I am creating button component |
 | Objective    | Design a workflow for us to collaborate on delivering the issue |
 | Blockers?    | None |
 
