--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -21,15 +21,9 @@
 
 ### Overview of the day
 
-<!-- Fill out the daily scrum table 
-  -- Doing today? - What are you working on today?
-  -- Objective?   - What do you hope to achieve today?
-  -- Blockers?    - Any blockers? Anywhere you need help?
--->
-
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? | I am creating button component |
+| Doing today? | Creating button component |
 | Objective    | Design a workflow for us to collaborate on delivering the issue |
 | Blockers?    | None |
 
@@ -39,22 +33,44 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
-**TODO: Copy for each day applicable..**
 
 <h2 align="center">07/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Creating button component Inputs and testing Input reusability |
+| Objective    | Learn component reusability, implement and test |
+| Blockers?    | None |
+
+### Task progresss board
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 <h2 align="center">08/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Creating button component Styling |
+| Objective    | Implement styling and follow code practices as advised adn create a pull request |
+| Blockers?    | None |
+
+### Task progresss board
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 <h2 align="center">09/02</h2>
 
-*No activity*
+
 
 <h2 align="center">10/02</h2>
 
