Updated portfolio for Friday, 10th Feb

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -15,7 +15,43 @@
   -- For each day, fill out your dairy
   -->
 
-<h1>Dairy</h1>
+
+  ### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 06/02/23 	| 🎨 Create the home page lander | In progress | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 07/02/23	| 🎨 Create the home page lander | In progress | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 08/02/23 	| 🎨 Create the home page lander | In progress | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 09/02/23	| 🎨 Create the home page lander | In progress | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 10/02/23 	| 🎨 Create the home page lander | Review | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 11/02/23	| 🎨 Create the home page lander |  | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| 12/02/23 	| 🎨 Create the home page lander |  | [#4](https://github.com/italanta/elewa-group/issues/4) |
+
+
+<!-- <h2 align="center">07/02</h2>
+
+*No activity*
+
+<h2 align="center">08/02</h2>
+
+*No activity*
+
+<h2 align="center">09/02</h2>
+
+*No activity*
+
+<h2 align="center">10/02</h2>
+
+*No activity* -->
+
+
+<br/>
+
+
+<h1>Diary</h1>
 
 <h2 align="center">06/02</h2>
 
@@ -33,32 +69,125 @@
 | Objective    |          |
 | Blockers?    |          |
 
-### Task progresss board
-
-<!-- List all the tasks and bounties in progress this week -->
-
-| Date     	| Issue 	| Status 	| Link 	|
-|----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
-
-**TODO: Copy for each day applicable..**
+<h1>Diary</h1>
 
 <h2 align="center">07/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+
+
+
+<h1>Diary</h1>
 
 <h2 align="center">08/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+<h1>Diary</h1>
 
 <h2 align="center">09/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+<h1>Diary</h1>
 
 <h2 align="center">10/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+<h1>Diary</h1>
+
+<h2 align="center">11/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+<h1>Diary</h1>
+
+<h2 align="center">12/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |          |
+| Objective    |          |
+| Blockers?    |          |
+
+
+<!-- **TODO: Copy for each day applicable..** -->
+
 
 
 <br/>
@@ -74,12 +203,14 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3>🚀🚀🚀Working on homepage lander for elewa-group and reating a pull request together with my team
+</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] ..
+- 🚧 `Work on issue #4 in elewa-group`
+- ✅ `Understand angular basics like file structures `
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -87,15 +218,18 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
+| **Start time** |    |     |     |   9:00am | 8:30am   |    |
+| **End time**	 |    |     |     |  5:00pm  |    |    |
+| **Hours**	     | 0  | 0   | 0   | 8hrs | 0  | 0  |
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- Creating a git pull request
+- Creating an angular app 
+- Creating an angular component
+- Decorators  in angular 
 
 <u>The key lesson(s) of this week:</u>
 
@@ -105,10 +239,13 @@ TODO
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was `exciting / encouraged / happy / apprehensive / overwhelmed /`  because `I am learning angular for the first time, but as we say, there is always a first time for everything. 
+I was also lifted up by collaborating with great team @ianchege([https://github.com/chegeian]) and @littlephillips([https://github.com/littlephillips])
+and created our first pull request.`
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more `excited / encouraged / happy /grateful /motivated` because 
+`I am going to dive deeper into angular and have more pull requests that I believe will be successfully merged.
+`
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
-
-- My level of stress is (relaxed / manageable / high) 
+- I find the project to be `demanding / competitive / challenges me `   I need to `learn-efectively and fast / tackle all blockers and avoid postponing.` 
+- My level of stress is `manageable.` 
