📝 doc: updated week_02 activities

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -33,7 +33,7 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
+| 06/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 
 <h2 align="center">07/02</h2>
@@ -50,7 +50,7 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
+| 07/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 <h2 align="center">08/02</h2>
 
@@ -59,22 +59,48 @@
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
 | Doing today? | Creating button component Styling |
-| Objective    | Implement styling and follow code practices as advised adn create a pull request |
+| Objective    | Implement styling and follow code practices as advised and create a pull request |
 | Blockers?    | None |
 
 ### Task progresss board
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 02/02/23 	| 🏇 Example issue name | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
+| 08/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Working on It | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 <h2 align="center">09/02</h2>
 
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Working  |
+| Objective    | Implement styling and follow code practices as advised and create a pull request |
+| Blockers?    | None |
+
+### Task progresss board
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 09/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Working on it | [#54](https://github.com/italanta/elewa-group/pull/54) |
 
 
 <h2 align="center">10/02</h2>
 
-*No activity*
+### Overview of the day
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Working  |
+| Objective    | Selecting a new issue and research on requirements |
+| Blockers?    | None |
+
+### Task progresss board
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 10/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Merged🚀 | [#54](https://github.com/italanta/elewa-group/pull/54) |
+| 10/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on it | [#20](https://github.com/italanta/elewa-group/issues/20) |
 
 
 <br/>
@@ -90,12 +116,15 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3 align="left">Kicking off the sprint and running the project</h3>
+<h3 align="left">Completing first issue and getting the work merged</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] ..
+- [x] Learn and implement Angular basics
+- [x] Collaborate on an open source project
+- [x] Learn and use best code practices
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -103,28 +132,28 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
+| **Start time** |  09:00  |  09:00   |   09:00  |  09:00  | 09:00   |  09:00  |
+| **End time**	 |  17:00  |   17:00  |  17:00   |  17:00  |  17:00  | 17:00   |
+| **Hours**	     | 8  | 8   | 8   | 8  | 8  | 8  |
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- Creating a reusable Angular component using binding and interpolation
 
 <u>The key lesson(s) of this week:</u>
 
-TODO
+- Using the ngOnInit class method to run code when the angular component is being rendered.
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was elevated because I got to work on the open-source project
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more peaceful because the work and requirements have gotten clearer.
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be friendly.
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is relaxed.
