--- a/progress/w01_02_02.md
+++ b/progress/w01_02_02.md
@@ -4,7 +4,7 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 01 - 01/30/2023</h1>
+<h1 align="center">Week 01 - 02/02/2023</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
@@ -16,27 +16,17 @@
 
 <h1>Diary</h1>
 
-<h2 align="center">30/01</h2>
-
-*No activity*
-
-<h2 align="center">31/01</h2>
-
-*No activity*
-
-<h2 align="center">01/02</h2>
-
-*No activity*
 
 <h2 align="center">02/02</h2>
+
 
 ### Overview of the day
 
 <!-- Fill out the daily scrum table 
   -- Doing today? - What are you working on today?
   -- Objective?   - What do you hope to achieve today?
-  -- Blockers?    - Any blockers? Anywhere you need help?
--->
+  -- Blockers?    - Any blockers? Anywhere you need help? -->
+
 
 | Scrum	 | Answers 	| 
 |----------	|-------	|
@@ -46,14 +36,13 @@
 
 
 ### Task progresss board
-
 <!-- List all the tasks and bounties in progress this week -->
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Run the project | Project is *running* or *not running* | |
-| Pick a teammate | Teammate *picked* or *asked to pick* | *Link to GitHub of teammate* |
+| Choose a project | *Chosen* | *https://github.com/italanta/elewa-group* |
+| Run the project | Project is *running*| |
+| Pick a teammate | Teammate *picked* | *https://github.com/jobkarani* |
 
 
 <h2 align="center">03/02</h2>
@@ -61,16 +50,16 @@
 
 ### Overview of the day
 
-<!-- Fill out the daily scrum table 
-  -- Doing today? - What are you working on today?
-  -- Objective?   - What do you hope to achieve today?
-  -- Blockers?    - Any blockers? Anywhere you need help?
--->
+<!-- Daily scrum table 
+  -- Doing today? - Reusable card component#7
+  -- Objective?   - To create a reusable card component and close issue #7
+  -- Blockers?    - No challenges -->
+
 
 | Scrum	 | Answers 	| 
 |----------	|-------	|
-| Doing today? | I am choosing a first issue and attending an elewa "Lesson of the week" |
-| Objective | To choose and understand my first issue |
+| Doing today? | I am choosing a first issue Reusable card component#7" |
+| Objective | To understand the chosen issue and start working on it|
 | Blockers? | No blockers |
 
 
@@ -80,15 +69,15 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Choose an issue | Issue *chosen* / *choosing* | *Link to issue* |
+| Choose a project |*Chosen* | *https://github.com/italanta/elewa-group* |
+| Choose an issue | Issue *chosen* | *https://github.com/italanta/elewa-group/issues/7* |
 
 <br/>
 
 <hr id="summary" />
 <!-- Fill this section at the end of each week, -->
 
-# Week 01 (30/01/23) - Overview
+# Week 01 (03/02/23) - Overview
 
 <!-- What was your main achievement -->
 <h2>Achievements</h2>
@@ -104,19 +93,19 @@
 - [ ] Take part in the project kick off
 - [ ] Develop my portfolio page
 - [ ] Register myself onto the workroom
-- [ ] Install *< Elewa or Kujali >* on my local device
-- [ ] Connect *< Elewa or Kujali >* to my local emulators and run the project
-- [ ] Connect *< Elewa or Kujali >* to firebase
+- [ ] Install *< Elewa-Group-Website, Elewa and Kujali >* on my local device
+- [ ] Connect *< Elewa-Group-Website >* to my local emulators and run the project
+<!-- - [ ] Connect *< Elewa or Kujali >* to firebase -->
 
 ### My week
 <!-- Keep track of your time table daily -->
 <u>This week's time table:</u>
 
-|                | Mo | Tu 	| We 	| Th    | Fr | Sa |
-|---             |---	|---	|---  |---    |--- |--- |
-| **Start time** |    |     |     | 08:00 |    |    |
-| **End time**	 |    |     |     | 17:00 |    |    |
-| **Hours**	     | 0  | 0   | 0   | 8     | 0  | 0  |
+|                |   Mo | Tu 	| We 	| Th    | Fr   | Sa |
+|---             |---	|---	|---    |---    |---   |--- |
+| **Start time** |      |       |       | 09:00 |09:00 |    |
+| **End time**	 |      |       |       | 17:00 |17:00 |    |
+| **Hours**	     | 0    | 0     | 0     | 8     | 8    | 0  |
 
 ### My lessons
 <!-- What did I learn? -->
@@ -124,21 +113,28 @@
 
 - Basics of Angular
 - Running an Angular project
-- Firebase
-- Serverless programming
+<!-- - Firebase -->
+<!-- - Serverless programming -->
 
 <u>The key lesson(s) of this week:</u>
 
-Observables are timelines. Values which change over time. Using Rxjs, a system can be developed to react to these timelines, hence the name "reactive programming."
+<!-- Observables are timelines. Values which change over time. Using Rxjs, a system can be developed to react to these timelines, hence the name "reactive programming." -->
+How to start working on Open Source Issues. I learned that I can fork open source respositories and select an issue to solve.
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was exciting because I got the opportunity to start working o iTalant's open source porjects
+
+- I find the project to be challenging as I continuously learn new concepts in angular and applying them on the issue chosen.
+
+- My level of stress is relaxed. I am solving one challenge at a time.
+
+<!-- - My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
   
 - Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
 
 - I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is (relaxed / manageable / high)  -->
