--- a/progress/w01_30_01.md
+++ b/progress/w01_30_01.md
@@ -16,19 +16,19 @@
 
 <h1>Dairy</h1>
 
-<h2 align="center">30/01</h2>
+<h2 align="center">Thursday 02/02 i startde my internship at Elewa.</h2>
 
 *No activity*
 
-<h2 align="center">31/01</h2>
+<h2 align="center">Friday 3/02 we were given guidElines on how we shall be working on projects</h2>
 
 *No activity*
 
-<h2 align="center">01/02</h2>
+<h2 align="center"> monday 06/02 i started learning Angural as it was the language we were supposded to use for our first project</h2>
 
 *No activity*
 
-<h2 align="center">02/02</h2>
+<h2 align="center">Thursday 09/02 i was able and ready to start practising my newly aquired knowledle on angural and was able to use to create an issue</h2>
 
 ### Overview of the day
 
@@ -141,9 +141,9 @@ Observables are timelines. Values which change over time. Using Rxjs, a system c
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was exciting  overwhelmed because i was starting a new language which i had not learned before.
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more excited, encouraged and grateful for this chance which i believe is going to challege me as well as teach me a lot about working enviroment as a developer.
 
 - I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
 
