working on my week one updates

--- a/progress/w01_30_01.md
+++ b/progress/w01_30_01.md
@@ -4,31 +4,26 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 01 - 01/30/2023</h1>
+<h1 align="center">Week 01 - 02/02/2023</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
 <br/>
 <!-- 
   -- SECTION: OVERVIEW
-  -- For each day, fill out your diary
+  -- For each day, fill out your dairy
   -->
 
 <h1>Diary</h1>
 
-<h2 align="center">30/01</h2>
-
-*No activity*
-
-<h2 align="center">31/01</h2>
-
-*No activity*
-
-<h2 align="center">01/02</h2>
-
-*No activity*
-
 <h2 align="center">02/02</h2>
+
+Onboarding Day
+
+<h2 align="center">03/02</h2>
+
+Setting up Elewa Group
+
 
 ### Overview of the day
 
@@ -51,9 +46,9 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
+| Choose a project | *Chosing*  | [elewa-group](https://github.com/italanta/elewa-group) |
 | Run the project | Project is *running* or *not running* | |
-| Pick a teammate | Teammate *picked* or *asked to pick* | *Link to GitHub of teammate* |
+| Picked teammates | Mariam Ali and Kevin Nzioki | [Mariam Ali](https://github.com/mwanasiti) and [Kevin Nzioki](https://github.com/nziokikevin) |
 
 
 <h2 align="center">03/02</h2>
@@ -80,8 +75,8 @@
 
 | Worked on 	| Status 	| Link 	|
 |----------	|-------	|--------	|
-| Choose a project | *Chosing* or *Chosen* | *Link to project* |
-| Choose an issue | Issue *chosen* / *choosing* | *Link to issue* |
+| Choose a project | *Chosen* | [elewa-group](https://github.com/italanta/elewa-group) |
+| Choose an issue | Issue 1 | [Issue 1](https://github.com/italanta/elewa-group/issues/1) |
 
 <br/>
 
@@ -104,9 +99,9 @@
 - [ ] Take part in the project kick off
 - [ ] Develop my portfolio page
 - [ ] Register myself onto the workroom
-- [ ] Install *< Elewa or Kujali >* on my local device
-- [ ] Connect *< Elewa or Kujali >* to my local emulators and run the project
-- [ ] Connect *< Elewa or Kujali >* to firebase
+- [ ] Install <i>Elewa Group project</i> on my local device
+- [ ] Connect <i>Elewa Group project</i> to my local emulators and run the project
+- [ ] Connect <i>Elewa Group project</i> to firebase
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -114,9 +109,9 @@
 
 |                | Mo | Tu 	| We 	| Th    | Fr | Sa |
 |---             |---	|---	|---  |---    |--- |--- |
-| **Start time** |    |     |     | 08:00 |    |    |
-| **End time**	 |    |     |     | 17:00 |    |    |
-| **Hours**	     | 0  | 0   | 0   | 8     | 0  | 0  |
+| **Start time** |    |     |     | 08:00 | 08:00   |    |
+| **End time**	 |    |     |     | 17:00 |  13:00  |    |
+| **Hours**	     | 0  | 0   | 0   | 8     | 5  | 0  |
 
 ### My lessons
 <!-- What did I learn? -->
@@ -135,10 +130,10 @@ Observables are timelines. Values which change over time. Using Rxjs, a system c
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was exciting & encouraged because I got to learn Angular which is interesting to me as I keep working with it.
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more  happy /& grateful because I got a chance I didn't expect
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be enjoyable as it challenges me I need something more challenging projects to help me grown in Angular.
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is relaxed.
