:memo:Readme: Updating my week 2 checklist

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -5,7 +5,7 @@
   In this agenda, you will note down day to day progress.
 -->
 
-<h1 align="center">Week 02 - 02/02/2023</h1>
+<h1 align="center">Week 02 - 09/02/2023</h1>
 
 <p align="center"><a href="#summary">Summary of this week</a></p>
 
@@ -17,7 +17,7 @@
 
 <h1>Diary</h1>
 
-<h2 align="center">06/02</h2>
+<h2 align="center">09/02</h2>
 
 ### Overview of the day
 
@@ -29,9 +29,9 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? |    Working on another issue      |
+| Objective    |   Grow my understanding in Angular       |
+| Blockers?    |   Still having things not working out successfully       |
 
 ### Task progresss board
 
@@ -39,10 +39,14 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/01) |
 
 **TODO: Copy for each day applicable..**
+
+<h2 align="center">06/02</h2>
+
+*No activity*
 
 <h2 align="center">07/02</h2>
 
