:memo:Readme: Updating my week 2 checklist again

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -40,29 +40,29 @@
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
 | 02/02/23 	| 🏇 Responsive Header | Closed | [#1](https://github.com/italanta/elewa-group/issues/01) |
-| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/01) |
+| 12/01/23	| 🏇 Reusable Hero | Closed | [#10](https://github.com/italanta/elewa-group/issues/10) |
 
 **TODO: Copy for each day applicable..**
 
 <h2 align="center">06/02</h2>
 
-*No activity*
+Learning Angular
 
 <h2 align="center">07/02</h2>
 
-*No activity*
+Working on Task Tracker App
 
 <h2 align="center">08/02</h2>
 
-*No activity*
+Reading out the Angular Documentation
 
 <h2 align="center">09/02</h2>
 
-*No activity*
+Worked on issue [10](https://github.com/italanta/elewa-group/issues/10)
 
 <h2 align="center">10/02</h2>
 
-*No activity*
+Creating a Pull Request
 
 
 <br/>
@@ -78,12 +78,15 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3 align="center">Getting a good grasp of Angular Js</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] ..
+- [ ] Create a component successfully without an error message
+- [ ] Create a reusable hero from scratch
+- [ ] Got to work on my styling using SCSS
+
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -91,28 +94,29 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
+| **Start time** |  08:00  |   08:00  |   08:00  | 08:00   | 08:00   |    |
+| **End time**	 | 11:00   |   12:00  |   10:30  |  17:00  |  16:00  |    |
+| **Hours**	     | 3  | 4   | 2.5   | 9  | 8  | 0  |
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- Using input decorator
+- Using nested styling in SCSS
 
 <u>The key lesson(s) of this week:</u>
 
-TODO
+Angular is simple except from its complexity from React
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week encouraged because I got Angular interesting
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more encouraged / & grateful because I just saw a different me compared to the last week one me.
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to challenging.
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is manageable.
