Update portfolio on week 3 progress

--- a/progress/w03_13_02.md
+++ b/progress/w03_13_02.md
@@ -17,9 +17,9 @@
   -- For each day, fill out your dairy
   -->
 
-<h1>Dairy</h1>
+<h1>Diary</h1>
 
-<h2 align="center">13/02</h2>
+<h2 align="center">Monday,13/02</h2>
 
 ### Overview of the day
 
@@ -31,9 +31,77 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? |  Working on issue  [#4](https://github.com/italanta/elewa-group/issues/4)       |
+| Objective    |    Ensure the issue reuses already created component     |
+| Blockers?    |     understanding reusable components in general    |
+
+
+<h2 align="center">Tuesday,14/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |  Working on issue  [#4](https://github.com/italanta/elewa-group/issues/4)       |
+| Objective    |    Learn about standalone components     |
+| Blockers?    |     How to make a component standalone and make it reuse another component    |
+
+
+<h2 align="center">15/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |  Working on issue  [#4](https://github.com/italanta/elewa-group/issues/4)       |
+| Objective    |   Debugging error after creating standalone component     |
+| Blockers?    |         |
+
+
+<h2 align="center">Thursday, 16/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |  Working on issue  [#4](https://github.com/italanta/elewa-group/issues/4)       |
+| Objective    |    Create pull request on the issue [#4]     |
+| Blockers?    |         |
+
+
+<h2 align="center">Friday, 17/02</h2>
+
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? |  Working on issue  [#22](https://github.com/italanta/elewa-group/issues/22)       |
+| Objective    |    Ensure the issue reuses already created component and style carousel     |
+| Blockers?    |     Styling carousel    |
 
 ### Task progresss board
 
@@ -41,26 +109,13 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| Monday,13/02/23 	| 🏇 Home page lander| In Progress | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| Tuesday,14/02/23	| 🏇 Home page lander| In Progress  | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| Wednesday,15/02/23	| 🏇 Home page lander| In Progress  | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| Thursday,16/02/23	| 🏇 Home page lander| Review  | [#4](https://github.com/italanta/elewa-group/issues/4) |
+| Friday,17/02/23	| 🏇 Create About us carousel | In Progress | [#22](https://github.com/italanta/elewa-group/issues/22) |
 
-**TODO: Copy for each day applicable..**
 
-<h2 align="center">14/02</h2>
-
-*No activity*
-
-<h2 align="center">15/02</h2>
-
-*No activity*
-
-<h2 align="center">16/02</h2>
-
-*No activity*
-
-<h2 align="center">17/02</h2>
-
-*No activity*
 
 
 <br/>
