📝 doc: updated progress

--- a/progress/w02_06_02.md
+++ b/progress/w02_06_02.md
@@ -100,7 +100,7 @@
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
 | 10/02/23 	| 🏇 [Button component with animation](https://github.com/italanta/elewa-group/issues/11) | Merged🚀 | [#54](https://github.com/italanta/elewa-group/pull/54) |
-| 10/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on it | [#20](https://github.com/italanta/elewa-group/issues/20) |
+| 10/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Selected | [#20](https://github.com/italanta/elewa-group/issues/20) |
 
 
 <br/>
