--- a/progress/w03_13_02.md
+++ b/progress/w03_13_02.md
@@ -31,9 +31,9 @@
 
 | Scrum	       | Answers 	| 
 |----------	   |-------	  |
-| Doing today? |          |
-| Objective    |          |
-| Blockers?    |          |
+| Doing today? | Creating About us location section files and subtasks |
+| Objective    | Design a workflow for us to collaborate on delivering the issue |
+| Blockers?    | None |
 
 ### Task progresss board
 
@@ -41,27 +41,106 @@
 
 | Date     	| Issue 	| Status 	| Link 	|
 |----------	|-------	|--------	|------	|
-| 17/01/23 	| 🏇 Example issue name | Merged | [#22](https://github.com/italanta/kujali/issues/22) |
-| 12/01/23	| 🏇 Example issue name | Closed/Approved | [#22](https://github.com/italanta/kujali/issues/22) |
+| 13/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on It | [#146](https://github.com/italanta/elewa-group/pull/146) |
 
 **TODO: Copy for each day applicable..**
 
 <h2 align="center">14/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Creating About us location section text and styling |
+| Objective    | Design the section according to the provided design |
+| Blockers?    | None |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 14/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on It | [#146](https://github.com/italanta/elewa-group/pull/146) |
 
 <h2 align="center">15/02</h2>
 
-*No activity*
 
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Styling the AboutUs section for mobile view |
+| Objective    | Design the mobile view |
+| Blockers?    | No Google Maps API Key to test the map |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 15/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on It | [#146](https://github.com/italanta/elewa-group/pull/146) |
 <h2 align="center">16/02</h2>
 
-*No activity*
+### Overview of the day
+
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Getting an Google Maps API Key for About us location section <br/> AppRouting|
+| Objective    | Getting the work merged <br/>Selecting a new issue|
+| Blockers?    | None |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 16/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Working on It | [#146](https://github.com/italanta/elewa-group/pull/146) |
 
 <h2 align="center">17/02</h2>
 
-*No activity*
+### Overview of the day
 
+<!-- Fill out the daily scrum table 
+  -- Doing today? - What are you working on today?
+  -- Objective?   - What do you hope to achieve today?
+  -- Blockers?    - Any blockers? Anywhere you need help?
+-->
+
+| Scrum	       | Answers 	| 
+|----------	   |-------	  |
+| Doing today? | Getting reviewed and selecting a new issue to work on|
+| Objective    | Work on new issue |
+| Blockers?    | None |
+
+### Task progresss board
+
+<!-- List all the tasks and bounties in progress this week -->
+
+| Date     	| Issue 	| Status 	| Link 	|
+|----------	|-------	|--------	|------	|
+| 17/02/23 	| 🏇 [About us location section](https://github.com/italanta/elewa-group/issues/20) | Merged🚀 | [#146](https://github.com/italanta/elewa-group/pull/146) |
+| 17/02/23 	| 🏇 [Configure app routing](https://github.com/italanta/elewa-group/issues/40) | Merged🚀 | [#146](https://github.com/italanta/elewa-group/pull/214) |
 
 <br/>
 
@@ -76,13 +155,15 @@
 <u>My main achievement:</u>
 
 <!-- Write the achievement you are most proud off in one line! -->
-<h3 align="center">Kicking off the sprint and running the project!</h3>
+<h3 align="left">Kicking off the sprint and running the project</h3>
+<h3 align="left">Completing first issue and getting the work merged</h3>
 
 <!-- List all your achievement -->
 <u>This week I managed to:</u>
 
-- [ ] 
-
+- [x] Learn and implement Angular basics
+- [x] Collaborate on an open source project
+- [x] Learn and use best code practices
 
 ### My week
 <!-- Keep track of your time table daily -->
@@ -90,29 +171,28 @@
 
 |                | Mo | Tu 	| We 	| Th | Fr | Sa |
 |---             |---	|---	|---  |--- |--- |--- |
-| **Start time** |    |     |     |    |    |    |
-| **End time**	 |    |     |     |    |    |    |
-| **Hours**	     | 0  | 0   | 0   | 0  | 0  | 0  |
-
+| **Start time** |  09:00  |  09:00   |   09:00  |  09:00  | 09:00   |  09:00  |
+| **End time**	 |  17:00  |   17:00  |  17:00   |  17:00  |  17:00  | 17:00   |
+| **Hours**	     | 8  | 8   | 8   | 8  | 8  | 8  |
 
 ### My lessons
 <!-- What did I learn? -->
 <u>Everything I learned</u>
 
-- 
+- Creating a reusable Angular component using binding and interpolation
 
 <u>The key lesson(s) of this week:</u>
 
-TODO
+- Using the ngOnInit class method to run code when the angular component is being rendered.
 
 ### How I am doing
 <!-- How did you feel? -->
 <u>Self assessment of how I felt this week:</u>
 
-- My mood this week was (exciting / encouraged / happy / afraid / overwhelmed / ...) because ...
+- My mood this week was elevated because I got to work on the open-source project
   
-- Compared to last week, I feel more (excited / encouraged / happy / overhwelmed / grateful / disappointed / bored / ...) because ...
+- Compared to last week, I feel more peaceful because the work and requirements have gotten clearer.
 
-- I find the project to be (joyful / relaxing / exciting / it challenges me / difficult / I need something more challenging / ...)
+- I find the project to be friendly.
 
-- My level of stress is (relaxed / manageable / high) 
+- My level of stress is relaxed.
